--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,45 @@
-.header {
-  background-color: blue;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  --type-first: Helvetica, Arial, sans-serif;
+  --type-second: "Spectral", Georgia;
+  margin: 0;
+  color: #333;
+  font-family: var(--type-first);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+button,
+input {
+  display: block;
+  font-size: 16px;
+  font-family: var(--type-first);
+  color: #333;
+}
+
+.container {
+  max-width: 800px;
+  padding: 0 1rem;
+  margin: 0 auto;
 }
