--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,2 +1,34 @@
 .header {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  background-color: white;
+  top: 0;
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+  }
+
+  &_logo {
+
+  }
+
+  &__login {
+    display: flex;
+    align-items: center;
+    color: #333;
+
+    &:after {
+      content: "";
+      display: inline;
+      width: 14px;
+      height: 17px;
+      background: url("../../assets/usuario.svg") no-repeat center center;
+      margin-left: .5rem;
+    }
+  }
 }
